kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: NAME
  namespace: NAMESPACE
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: NAME
